<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/singleSongView"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="5dp"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/songImage"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:src="@drawable/custom_image" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/songName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:ellipsize="end"
            android:textStyle="bold"
            android:maxWidth="300dp"
            android:textSize="16sp"
            tools:text="@string/song_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/songArtist"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_vertical"
                android:layout_marginStart="10dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxWidth="200dp"
                android:maxLines="1"
                tools:text="@string/song_artist" />

            <View
                android:layout_width="7dp"
                android:layout_height="7dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/circle" />

            <TextView
                android:id="@+id/songDuration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|center_vertical"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                tools:text="@string/duration_placeholder" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>